--- a/kitty.conf
+++ b/kitty.conf
@@ -1038,7 +1038,7 @@ background_opacity 0.8
 #: dynamic_background_opacity was enabled in the original config.
 
 background_image none
-startup_session /home/pipa/.config/kitty/session_file.txt
+startup_session $HOME/.config/kitty/session_file.txt
 map ctrl+shift+enter launch fish
 #: Path to a background image. Must be in PNG format.
 
